cluster/apps/default/ombi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name ombi
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: lscr.io/linuxserver/ombi:4.16.12
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 3579
          volumeMounts:
            - name: ombi-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: ombi-config
          persistentVolumeClaim:
            claimName: ombi-config
