cluster/apps/default/ombi/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ombi
  labels:
    app.kubernetes.io/name: ombi
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`ombi.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: dashboard-headers@file
      services:
        - name: ombi
          port: 3579
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
